Fix z-index stacking issue for profile dropdown menu

--- a/src/app/components/profile-card/profile-card.scss
+++ b/src/app/components/profile-card/profile-card.scss
@@ -7,7 +7,7 @@
   /* Positioning */
   position: relative;
   overflow: visible;
-  z-index: 10;
+  z-index: 100;
 
   /* Box Model */
   width: 100%;
